# user-preference-api

./: .gitignore  CODEOWNERS  Dockerfile  Pipfile  README.md  pyproject.toml
.github/workflows/: ci.yml  deploy.yml
k8s/: deployment.yaml  service.yaml
src/user_preference_api/: __init__.py  main.py
tests/: test_app.py  test_tooling.py
