[project]
name = "user-preference-api"
version = "0.1.0"
description = "Legacy-style user preference service."
readme = "README.md"
requires-python = ">=3.13"
dependencies = ["flask==3.1.1"]

[build-system]
requires = ["hatchling==1.27.0"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/user_preference_api"]
